==> sparkfun/SparkFun_BQ27441_Arduino_Library/src/SparkFunBQ27441.cpp <==
#include "Arduino.h"
#include <Wire.h>
#include "SparkFunBQ27441.h"
#include "BQ27441_Definitions.h"

bool BQ27441::begin(void)
{
	uint16_t deviceID = 0;
	
	Wire.begin(); // Initialize I2C master
	
	deviceID = deviceType(); // Read deviceType from BQ27441
	
	if (deviceID == BQ27441_DEVICE_ID)
	{
		return true; // If device ID is valid, return true
	}
	
	return false; // Otherwise return false
}

int16_t BQ27441::i2cReadBytes(uint8_t subAddress, uint8_t * dest, uint8_t count)
{
	int16_t timeout = BQ72441_I2C_TIMEOUT;	
	Wire.beginTransmission(_deviceAddress);
	Wire.write(subAddress);
	Wire.endTransmission(true);
	
	Wire.requestFrom(_deviceAddress, count);
	while ((Wire.available() < count) && timeout--)
		delay(1);
	if (timeout)
	{
		for (int i=0; i<count; i++)
		{
			dest[i] = Wire.read();
		}
	}
	
	return timeout;
}

uint16_t BQ27441::i2cWriteBytes(uint8_t subAddress, uint8_t * src, uint8_t count)
{
	Wire.beginTransmission(_deviceAddress);
	Wire.write(subAddress);
	for (int i=0; i<count; i++)
	{
		Wire.write(src[i]);
	}	
	Wire.endTransmission(true);
	
	return true;	
}
